--- a/Mini_app.html
+++ b/Mini_app.html
@@ -2,40 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>QR Scanner Mini App</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
+            justify-content: center;
             height: 100vh;
             margin: 0;
             background-color: var(--tg-theme-bg-color, #ffffff);
             color: var(--tg-theme-text-color, #000000);
         }
         #scanButton {
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 12px 24px;
+            font-size: 18px;
             cursor: pointer;
             background-color: var(--tg-theme-button-color, #3390ec);
             color: var(--tg-theme-button-text-color, #ffffff);
             border: none;
             border-radius: 8px;
+            margin-bottom: 20px;
         }
         #result {
-            margin-top: 20px;
             text-align: center;
+            margin-top: 20px;
+            padding: 10px;
+            max-width: 80%;
+            word-break: break-all;
         }
     </style>
 </head>
 <body>
-    <div>
-        <button id="scanButton">Scan QR Code</button>
-        <div id="result"></div>
-    </div>
+    <button id="scanButton">Scan QR Code</button>
+    <div id="result"></div>
 
     <script>
         const tg = window.Telegram.WebApp;
@@ -45,17 +48,21 @@
         const resultDiv = document.getElementById('result');
 
         scanButton.addEventListener('click', () => {
-            tg.showScanQrPopup({
-                text: "Please scan a QR code"
-            }, (qrText) => {
-                if (qrText) {
-                    resultDiv.textContent = "Scanned QR code: " + qrText;
-                    // You can send this data back to your bot if needed
-                    tg.sendData(qrText);
-                } else {
-                    resultDiv.textContent = "Scanning cancelled or failed";
-                }
-            });
+            if (tg.showScanQrPopup) {
+                tg.showScanQrPopup({
+                    text: "Please scan a QR code"
+                }, (qrText) => {
+                    if (qrText) {
+                        resultDiv.textContent = "Scanned QR code: " + qrText;
+                        // Send the scanned data back to the bot
+                        tg.sendData(qrText);
+                    } else {
+                        resultDiv.textContent = "Scanning cancelled or failed";
+                    }
+                });
+            } else {
+                resultDiv.textContent = "QR scanning is not supported in this environment";
+            }
         });
 
         // Handle the back button
