--- a/Mini_app.html
+++ b/Mini_app.html
@@ -3,40 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>QR Scanner Mini App</title>
+    <title>OCR_Mini_App</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
             margin: 0;
+            padding: 20px;
             background-color: var(--tg-theme-bg-color, #ffffff);
             color: var(--tg-theme-text-color, #000000);
         }
+        h1 {
+            color: #0088cc;
+            margin-bottom: 20px;
+        }
         #scanButton {
-            padding: 12px 24px;
+            display: block;
+            width: 100%;
+            padding: 15px;
             font-size: 18px;
-            cursor: pointer;
             background-color: var(--tg-theme-button-color, #3390ec);
             color: var(--tg-theme-button-text-color, #ffffff);
             border: none;
             border-radius: 8px;
-            margin-bottom: 20px;
+            cursor: pointer;
+            margin-top: 20px;
         }
         #result {
-            text-align: center;
             margin-top: 20px;
-            padding: 10px;
-            max-width: 80%;
             word-break: break-all;
         }
     </style>
 </head>
 <body>
+    <h1>Telegram-Mini-app</h1>
     <button id="scanButton">Scan QR Code</button>
     <div id="result"></div>
 
@@ -54,7 +54,6 @@
                 }, (qrText) => {
                     if (qrText) {
                         resultDiv.textContent = "Scanned QR code: " + qrText;
-                        // Send the scanned data back to the bot
                         tg.sendData(qrText);
                     } else {
                         resultDiv.textContent = "Scanning cancelled or failed";
@@ -65,11 +64,7 @@
             }
         });
 
-        // Handle the back button
-        tg.BackButton.show();
-        tg.BackButton.onClick(() => {
-            tg.close();
-        });
+        tg.ready();
     </script>
 </body>
 </html>
